test/bad/fieldpolicy/StaticFieldGiveIntToPolicy.para

public class StaticFieldGiveIntToPolicy {
    public static final policy high = 1;
}
